--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/icons/favikon.png" alt="Фавиконка сайта Седоны." sizes="32x32" type="image/png">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> список гостиниц в Седоне</title>
     <!-- <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38"/..> -->
@@ -335,7 +336,6 @@
               <input  type="email" id="user-email" name="user-email" placeholder="Ваш e-mail" required>
               <button class="button button-mailing" type="submit">Подписаться</button>
             </p>
-            <button class="mailing-button" type="submit">Подписаться</button>
           </form>
         </section>
 
