--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
   <body>
     <!-- Меню главной страницы -->
-
     <div class="page-container">
 
       <header class="main-header" data-test="header">
@@ -35,7 +34,7 @@
               <a class="navigation-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link navigation-text" href="catalog.html">Гостиницы</a>
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
           <!-- Список второй части меню -->
@@ -82,48 +81,32 @@
         <!-- Вторая секция - Преимущества -->
         <section class="advantages" data-test="advantages">
           <!-- Подзаголовок секции "Преимущества" -->
-          <h2>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
+          <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
           <p class="advantages-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-          <div class="advantages-reasons">
-            <h3 class="advantages-subtheme visually-hidden">Преимущества</h3>
-            <!-- Подтема (скрытый) -->
-            <img src="images/city.jpg" width="800" height="385" alt="Национальные флаги на фоне уютных домов в окрестностях города Седоны.">
             <ul class="advantages-list">
               <li class="advantages-item">
-                <h4>Настоящий городок</h4>
+                <h3>Настоящий городок</h3>
                 <p>Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь</p>
+                <img src="images/city.jpg" width="800" height="385" alt="Национальные флаги на фоне уютных домов в окрестностях города Седоны.">
               </li>
-            </ul>
-          </div>
-          <div class="advantages-reasons">
-            <h3 class="advantages-subtheme visually-hidden">Причины</h3>
-            <!-- Подтема - продолжение (скрытый) -->
-            <ul class="advantages-list">
               <li class="advantages-item">
-                <h4>Небольшая<br> площадь</h4>
+                <h3>Небольшая<br> площадь</h3>
                 <p>Все достопримечательности<br> находятся очень близко</p>
               </li>
               <li class="advantages-item">
-                <h4>Красивая<br> дорога</h4>
+                <h3>Красивая<br> дорога</h3>
                 <p>Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
               </li>
               <li class="advantages-item">
-                <h4>Мало<br> туристов</h4>
+                <h3>Мало<br> туристов</h3>
                 <p>Большинство едет в Гранд<br> Каньон и толпится там</p>
               </li>
-            </ul>
-          </div>
-          <div class="advantages-reasons">
-            <h3 class="advantages-subtheme visually-hidden">Причины</h3>
-            <!-- Подтема - продолжение (скрытый) -->
-            <ul>
               <li class="advantages-item">
-                <h4>Там есть<br> мост Дьявола</h4>
+                <h3>Там есть<br> мост Дьявола</h3>
                 <p>Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
+                <img src="images/canyon.jpg" width="800" height="385" alt="Красивый каньон и скалы у моста Дьявола в окрестностях Седоны.">
               </li>
             </ul>
-            <img src="images/canyon.jpg" width="800" height="385" alt="Красивый каньон и скалы у моста Дьявола в окрестностях Седоны.">
-          </div>
         </section>
 
         <!-- Третья секция - преимущества -->
