Отправляет стилизацию на проверку.

--- a/catalog.html
+++ b/catalog.html
@@ -152,7 +152,7 @@
                 <input type="range" class="range-min" min="0" max="9000" value="5000" step="10">
               </div>
             </fieldset>
-            <input type="submit" value="Применить"><br>
+            <input type="submit" value="Применить">
             <input type="reset" value="Сбросить">
           </form>
         </section>
@@ -198,12 +198,10 @@
                 <li class="hotel-cards-item">
                   <a class="hotel-cards-link" href="#">
                     <img src="images/catalog/hotel-1.jpg" alt="Гостиница Amara-Resort-and-Spa - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
-                    <br>
                     <h4 class="hotel-cards-subtitul">Amara Resort & Spa</h4>
                   </a>
                   <p class="hotel-cards-text">Гостиница</p>
                   <p class="hotel-cards-price">От 4000 ₽</p>
-                  <br>
                   <a>
                     <input class="hotel-cards-more-detailed" type="submit" href="#" value="Подробнее">
                   </a>
@@ -217,16 +215,13 @@
                     <input class="hotel-cards-rating" type="submit" value="Рейтинг: 8.5">
                   </a>
                 </li>
-                <br>
                 <li class="hotel-cards-item">
                   <a class="hotel-cards-link" href="#">
                     <img src="images/catalog/hotel-2.jpg" alt="Гостиница Villas-at-Poco-Diablo - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
-                    <br>
                     <h4 class="hotel-cards-subtitul">Villas-at-Poco-Diablo</h4>
                   </a>
                   <p class="hotel-cards-text">Гостиница</p>
                   <p class="hotel-cards-price">От 5000 ₽</p>
-                  <br>
                   <a>
                     <input class="hotel-cards-more-detailed" type="submit" href="#" value="Подробнее">
                   </a>
@@ -240,16 +235,14 @@
                     <input class="hotel-cards-rating" type="submit" value="Рейтинг: 9.2">
                   </a>
                 </li>
-                <br>
                 <li class="hotel-cards-item">
                   <a class="hotel-cards-link" href="#">
                     <img src="images/catalog/hotel-3.jpg" alt="Гостиница Desert Quail Inn - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
-                    <br>
+                    
                     <h4 class="hotel-cards-subtitul">Desert Quail Inn</h4>
                   </a>
                   <p class="hotel-cards-text">Гостиница</p>
                   <p class="hotel-cards-price">От 2500 ₽</p>
-                  <br>
                   <a>
                     <input class="hotel-cards-more-detailed" type="submit" href="#" value="Подробнее">
                   </a>
@@ -263,16 +256,13 @@
                     <input class="hotel-cards-rating" type="submit" value="Рейтинг: 6.9">
                   </a>
                 </li>
-                <br>
                 <li class="hotel-cards-item">
                   <a class="hotel-cards-link" href="#">
                     <img src="images/catalog/hotel-2.jpg" alt="Гостиница Villas-at-Poco-Diablo - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
-                    <br>
                     <h4 class="hotel-cards-subtitul">GreenTree Inn</h4>
                   </a>
                   <p class="hotel-cards-text">Гостиница</p>
                   <p class="hotel-cards-price">От 1500 ₽</p>
-                  <br>
                   <a>
                     <input class="hotel-cards-more-detailed" type="submit" href="#" value="Подробнее">
                   </a>
@@ -330,7 +320,7 @@
         <section class="mailing" data-test="subsribe">
           <h2 class="mailing-title">Подпишитесь на рассылку</h2>
           <!-- Подзаголовок секций "Рассылка" -->
-          <p class="mailing-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+          <p class="mailing-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post" href="#">
             <p class="mailing-form-name">
               <input  type="email" id="user-email" name="user-email" placeholder="Ваш e-mail" required>
