--- a/index.html
+++ b/index.html
@@ -86,24 +86,24 @@
             <ul class="advantages-list">
               <li class="advantages-item">
                 <h3>Настоящий городок</h3>
-                <p>Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь</p>
+                <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                 <img src="images/city.jpg" width="800" height="385" alt="Национальные флаги на фоне уютных домов в окрестностях города Седоны.">
               </li>
               <li class="advantages-item">
-                <h3>Небольшая<br> площадь</h3>
-                <p>Все достопримечательности<br> находятся очень близко</p>
+                <h3>Небольшая площадь</h3>
+                <p>Все достопримечательности находятся очень близко</p>
               </li>
               <li class="advantages-item">
-                <h3>Красивая<br> дорога</h3>
-                <p>Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
+                <h3>Красивая дорога</h3>
+                <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </li>
               <li class="advantages-item">
-                <h3>Мало<br> туристов</h3>
-                <p>Большинство едет в Гранд<br> Каньон и толпится там</p>
+                <h3>Мал туристов</h3>
+                <p>Большинство едет в Гранд Каньон и толпится там</p>
               </li>
               <li class="advantages-item">
-                <h3>Там есть<br> мост Дьявола</h3>
-                <p>Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
+                <h3>Там есть мост Дьявола</h3>
+                <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
                 <img src="images/canyon.jpg" width="800" height="385" alt="Красивый каньон и скалы у моста Дьявола в окрестностях Седоны.">
               </li>
             </ul>
@@ -112,7 +112,7 @@
         <!-- Третья секция - преимущества -->
         <section class="services">
           <!-- Подзаголовок секций "Инфраструктура" -->
-          <h2>Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</h2>
+          <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
           <p class="services-text">Опытный персонал и качественное обслуживание!</p>
           <div class="services-reasons">
             <h3 class="visually-hidden">Инфраструктура</h3>
@@ -122,25 +122,22 @@
                 <object data="images/icons/home.svg">
                   <img src="../images/icons/home.svg" width="75" height="72" role="img" aria-label="Домик" type="image/svg+xml">
                 </object>
-                <br>
                 <p><strong>Жильё</strong></p>
-                <p class="services-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
+                <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
               <li class="services-item">
                 <object data="images/icons/food.svg">
                   <img src="../images/icons/food.svg" width="75" height="72" role="img" aria-label="Бургер" type="image/svg+xml">
                 </object>
-                <br>
                 <p><strong>Еда</strong></p>
-                <p class="services-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
+                <p class="services-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li class="services-item">
                 <object data="images/icons/souvenir.svg">
                   <img src="../images/icons/souvenir.svg" width="75" height="72" role="img" aria-label="Сувенир" type="image/svg+xml">
                 </object>
-                <br>
                 <p><strong>Сувениры</strong></p>
-                <p class="services-description">Не только китайского,<br> но и настоящего местного<br> производства!</p>
+                <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
               </li>
             </ul>
           </div>
@@ -150,7 +147,7 @@
         <section class="interest" data-test="search">
           <!-- Подзаголовок секций "Интерес" -->
           <h2>Заинтересовались?</h2>
-          <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="interest-button" href="catalog.html">Поиск гостиницы в Седоне</a>
           </form>
         </section>
@@ -159,7 +156,7 @@
         <section class="mailing mailing-subscribe" data-test="subsribe">
           <h2 class="mailing-title">Подпишитесь на рассылку</h2>
           <!-- Подзаголовок секций "Рассылка" -->
-          <p class="mailing-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+          <p class="mailing-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post" href="#">
             <p class="mailing-form-name">
               <input  type="email" id="user-email" name="user-email" placeholder="Ваш e-mail" required>
