--- a/5/catalog.html
+++ b/5/catalog.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/icons/favikon.png" alt="Фавиконка сайта Седоны." sizes="32x32" type="image/png">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> список гостиниц в Седоне</title>
     <!-- <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38"/..> -->
@@ -22,20 +23,18 @@
         <h2 class="visually-hidden">Навигация</h2>
         <!-- Основной логотип города Седоны-->
         <a class="main-header-logo" href="index.html">
-          <img src="../images/brand-sedona.svg" width="140" height="70" type="image/svg+xml" alt="Логотип сайта городка Седона.">
+          <img src="images/brand-sedona.svg" width="140" height="70" type="image/svg+xml" alt="Логотип сайта городка Седона.">
         </a>
         <!-- Список первой части меню -->
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-linkt" href="index.html">
-              <span>Главная</span>
-            </a>
+            <a class="navigation-link" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" aria-current="page">Гостиницы</a>
+            <a class="navigation-link navigation-text navigation-link-current" aria-current="page">Гостиницы</a>
           </li>
         </ul>
         <!-- Список второй части меню -->
@@ -54,14 +53,11 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" viewBox="0 0 19 17" fill="none">
                 <path d="M9.29282 17C8.99282 17 8.69282 16.9 8.49282 16.6C3.09282 10.5 1.79282 9.1 1.49282 8.7C0.792822 7.8 0.392822 6.6 0.392822 5.4C0.392822 2.4 2.79282 0 5.89282 0C7.19282 0 8.39282 0.5 9.39282 1.3C10.3928 0.5 11.6928 0 12.8928 0C15.8928 0 18.3928 2.4 18.3928 5.4C18.3928 6.7 17.8928 7.9 17.0928 8.8L10.0928 16.7C9.89282 16.9 9.69282 17 9.29282 17ZM3.29282 7.5C3.59282 7.9 6.79282 11.5 9.39282 14.4L15.5928 7.4C16.0928 6.9 16.2928 6.2 16.2928 5.4C16.2928 3.6 14.7928 2.1 12.9928 2.1C11.9928 2.1 10.9928 2.6 10.2928 3.4C9.99282 3.7 9.69282 3.8 9.39282 3.8C9.09282 3.8 8.79282 3.6 8.59282 3.4C7.89282 2.6 6.89282 2.1 5.89282 2.1C4.09282 2.1 2.59282 3.6 2.59282 5.4C2.49282 6.3 2.89282 7 3.29282 7.5C3.19282 7.5 3.19282 7.5 3.29282 7.5Z" fill="black"/>
               </svg>
-              <span class="user-favorite-count rectangle">12</span>
+              <span class="user-favorite-count">12</span>
             </a>
           </li>
           <li class="navigation-item-user">
-            <a class="navigation-link-user" href="catalog.html">
-              <button class="navigation-button type="button" >
-                <span>Хочу сюда!</span>
-              </button>
+            <a class="navigation-link-user navigation-button" href="#">Хочу сюда!</span>
             </a>
           </li>
         </ul>
@@ -157,7 +153,7 @@
                 <input type="range" class="range-min" min="0" max="9000" value="5000" step="10">
               </div>
             </fieldset>
-            <input type="submit" value="Применить"><br>
+            <input type="submit" value="Применить">
             <input type="reset" value="Сбросить">
           </form>
         </section>
@@ -203,12 +199,10 @@
                 <li class="hotel-cards-item">
                   <a class="hotel-cards-link" href="#">
                     <img src="images/catalog/hotel-1.jpg" alt="Гостиница Amara-Resort-and-Spa - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
-                    <br>
                     <h4 class="hotel-cards-subtitul">Amara Resort & Spa</h4>
                   </a>
                   <p class="hotel-cards-text">Гостиница</p>
                   <p class="hotel-cards-price">От 4000 ₽</p>
-                  <br>
                   <a>
                     <input class="hotel-cards-more-detailed" type="submit" href="#" value="Подробнее">
                   </a>
@@ -222,16 +216,13 @@
                     <input class="hotel-cards-rating" type="submit" value="Рейтинг: 8.5">
                   </a>
                 </li>
-                <br>
                 <li class="hotel-cards-item">
                   <a class="hotel-cards-link" href="#">
                     <img src="images/catalog/hotel-2.jpg" alt="Гостиница Villas-at-Poco-Diablo - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
-                    <br>
                     <h4 class="hotel-cards-subtitul">Villas-at-Poco-Diablo</h4>
                   </a>
                   <p class="hotel-cards-text">Гостиница</p>
                   <p class="hotel-cards-price">От 5000 ₽</p>
-                  <br>
                   <a>
                     <input class="hotel-cards-more-detailed" type="submit" href="#" value="Подробнее">
                   </a>
@@ -245,16 +236,14 @@
                     <input class="hotel-cards-rating" type="submit" value="Рейтинг: 9.2">
                   </a>
                 </li>
-                <br>
                 <li class="hotel-cards-item">
                   <a class="hotel-cards-link" href="#">
                     <img src="images/catalog/hotel-3.jpg" alt="Гостиница Desert Quail Inn - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
-                    <br>
+                    
                     <h4 class="hotel-cards-subtitul">Desert Quail Inn</h4>
                   </a>
                   <p class="hotel-cards-text">Гостиница</p>
                   <p class="hotel-cards-price">От 2500 ₽</p>
-                  <br>
                   <a>
                     <input class="hotel-cards-more-detailed" type="submit" href="#" value="Подробнее">
                   </a>
@@ -268,16 +257,13 @@
                     <input class="hotel-cards-rating" type="submit" value="Рейтинг: 6.9">
                   </a>
                 </li>
-                <br>
                 <li class="hotel-cards-item">
                   <a class="hotel-cards-link" href="#">
                     <img src="images/catalog/hotel-2.jpg" alt="Гостиница Villas-at-Poco-Diablo - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
-                    <br>
                     <h4 class="hotel-cards-subtitul">GreenTree Inn</h4>
                   </a>
                   <p class="hotel-cards-text">Гостиница</p>
                   <p class="hotel-cards-price">От 1500 ₽</p>
-                  <br>
                   <a>
                     <input class="hotel-cards-more-detailed" type="submit" href="#" value="Подробнее">
                   </a>
@@ -335,52 +321,51 @@
         <section class="mailing" data-test="subsribe">
           <h2 class="mailing-title">Подпишитесь на рассылку</h2>
           <!-- Подзаголовок секций "Рассылка" -->
-          <p class="mailing-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+          <p class="mailing-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post" href="#">
             <p class="mailing-form-name">
               <input  type="email" id="user-email" name="user-email" placeholder="Ваш e-mail" required>
               <button class="button button-mailing" type="submit">Подписаться</button>
             </p>
-            <button class="mailing-button" type="submit">Подписаться</button>
           </form>
         </section>
 
-    <footer class="main-footer" data-test="footer">
-      <ul class="footer-social-list">
-        <li class="footer-social-item">
-          <a href="https://vk.com/htmlacademy">
-            <img src="images/icons/vk-focus.svg" width="24" height="14" alt="Российская социальная сеть «ВКонтакте».">
-            <span class="visually-hidden">ВКонтакте</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a href="https://t.me/htmlacademy">
-            <img src="images/icons/telegram-focus.svg" width="18" height="16" alt="Мессенджер «Telegram».">
-            <span class="visually-hidden">Telegram</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a href="https://www.youtube.com/user/htmlacademyru">
-            <img src="images/icons/youtube-focus.svg" width="22" height="17" alt="Видеохостинг Youtube.">
-            <span class="visually-hidden">Youtube</span>
-          </a>
-        </li>
-      <ul class="footer-phone-item">
-        <li class="footer-phone-link">
-          <a class="text-phone" href="tel:+7(812)812-12-12">
-            <span>+7(812)812-12-12</span>
-          </a>
-        </li>
-      </ul>
-      <ul class="footer-logo-item">
-        <li class="footer-logo-link">
-          <a href="https://htmlacademy.ru/">
-            <img src="images/brand=htmlacademy.svg" width="114.9" height="32.9" alt="Видеохостинг Youtube.">
-            <span class="visually-hidden">HTML Academy</span>
-          </a>
-        </li>
-      </ul>
-    </footer>
+        <footer class="main-footer" data-test="footer">
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
+                <img src="images/icons/vk-focus.svg" width="24" height="14" alt="Российская социальная сеть «ВКонтакте».">
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://t.me/htmlacademy">
+                <img src="images/icons/telegram-focus.svg" width="18" height="16" alt="Мессенджер «Telegram».">
+                <span class="visually-hidden">Telegram</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
+                <img src="images/icons/youtube-focus.svg" width="22" height="17" alt="Видеохостинг Youtube.">
+                <span class="visually-hidden">Youtube</span>
+              </a>
+            </li>
+          <ul class="footer-phone-item">
+            <li class="footer-phone-link">
+              <a class="text-phone" href="tel:+7(812)812-12-12">
+                <span>+7(812)812-12-12</span>
+              </a>
+            </li>
+          </ul>
+          <ul class="footer-logo-item">
+            <li class="footer-logo-link">
+              <a class="logo-htmlacademy" href="https://htmlacademy.ru/">
+                <img src="images/brand=htmlacademy.svg" width="114.9" height="32.9" alt="Видеохостинг Youtube.">
+                <span class="visually-hidden">HTML Academy</span>
+              </a>
+            </li>
+          </ul>
+        </footer>
 
   </body>
 
