--- a/5/index.html
+++ b/5/index.html
@@ -13,7 +13,6 @@
 
   <body>
     <!-- Меню главной страницы -->
-
     <div class="page-container">
 
       <header class="main-header" data-test="header">
@@ -36,7 +35,7 @@
               <a class="navigation-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link navigation-text" href="catalog.html">Гостиницы</a>
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
           <!-- Список второй части меню -->
@@ -83,54 +82,38 @@
         <!-- Вторая секция - Преимущества -->
         <section class="advantages" data-test="advantages">
           <!-- Подзаголовок секции "Преимущества" -->
-          <h2>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
+          <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
           <p class="advantages-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-          <div class="advantages-reasons">
-            <h3 class="advantages-subtheme visually-hidden">Преимущества</h3>
-            <!-- Подтема (скрытый) -->
-            <img src="images/city.jpg" width="800" height="385" alt="Национальные флаги на фоне уютных домов в окрестностях города Седоны.">
             <ul class="advantages-list">
               <li class="advantages-item">
-                <h4>Настоящий городок</h4>
-                <p>Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь</p>
+                <h3>Настоящий городок</h3>
+                <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                <img src="images/city.jpg" width="800" height="385" alt="Национальные флаги на фоне уютных домов в окрестностях города Седоны.">
+              </li>
+              <li class="advantages-item">
+                <h3>Небольшая площадь</h3>
+                <p>Все достопримечательности находятся очень близко</p>
+              </li>
+              <li class="advantages-item">
+                <h3>Красивая дорога</h3>
+                <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
+              <li class="advantages-item">
+                <h3>Мал туристов</h3>
+                <p>Большинство едет в Гранд Каньон и толпится там</p>
+              </li>
+              <li class="advantages-item">
+                <h3>Там есть мост Дьявола</h3>
+                <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                <img src="images/canyon.jpg" width="800" height="385" alt="Красивый каньон и скалы у моста Дьявола в окрестностях Седоны.">
               </li>
             </ul>
-          </div>
-          <div class="advantages-reasons">
-            <h3 class="advantages-subtheme visually-hidden">Причины</h3>
-            <!-- Подтема - продолжение (скрытый) -->
-            <ul class="advantages-list">
-              <li class="advantages-item">
-                <h4>Небольшая<br> площадь</h4>
-                <p>Все достопримечательности<br> находятся очень близко</p>
-              </li>
-              <li class="advantages-item">
-                <h4>Красивая<br> дорога</h4>
-                <p>Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
-              </li>
-              <li class="advantages-item">
-                <h4>Мало<br> туристов</h4>
-                <p>Большинство едет в Гранд<br> Каньон и толпится там</p>
-              </li>
-            </ul>
-          </div>
-          <div class="advantages-reasons">
-            <h3 class="advantages-subtheme visually-hidden">Причины</h3>
-            <!-- Подтема - продолжение (скрытый) -->
-            <ul>
-              <li class="advantages-item">
-                <h4>Там есть<br> мост Дьявола</h4>
-                <p>Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
-              </li>
-            </ul>
-            <img src="images/canyon.jpg" width="800" height="385" alt="Красивый каньон и скалы у моста Дьявола в окрестностях Седоны.">
-          </div>
         </section>
 
         <!-- Третья секция - преимущества -->
         <section class="services">
           <!-- Подзаголовок секций "Инфраструктура" -->
-          <h2>Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</h2>
+          <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
           <p class="services-text">Опытный персонал и качественное обслуживание!</p>
           <div class="services-reasons">
             <h3 class="visually-hidden">Инфраструктура</h3>
@@ -140,25 +123,22 @@
                 <object data="images/icons/home.svg">
                   <img src="../images/icons/home.svg" width="75" height="72" role="img" aria-label="Домик" type="image/svg+xml">
                 </object>
-                <br>
                 <p><strong>Жильё</strong></p>
-                <p class="services-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
+                <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
               <li class="services-item">
                 <object data="images/icons/food.svg">
                   <img src="../images/icons/food.svg" width="75" height="72" role="img" aria-label="Бургер" type="image/svg+xml">
                 </object>
-                <br>
                 <p><strong>Еда</strong></p>
-                <p class="services-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
+                <p class="services-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li class="services-item">
                 <object data="images/icons/souvenir.svg">
                   <img src="../images/icons/souvenir.svg" width="75" height="72" role="img" aria-label="Сувенир" type="image/svg+xml">
                 </object>
-                <br>
                 <p><strong>Сувениры</strong></p>
-                <p class="services-description">Не только китайского,<br> но и настоящего местного<br> производства!</p>
+                <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
               </li>
             </ul>
           </div>
@@ -168,7 +148,7 @@
         <section class="interest" data-test="search">
           <!-- Подзаголовок секций "Интерес" -->
           <h2>Заинтересовались?</h2>
-          <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="interest-button" href="catalog.html">Поиск гостиницы в Седоне</a>
           </form>
         </section>
@@ -177,7 +157,7 @@
         <section class="mailing mailing-subscribe" data-test="subsribe">
           <h2 class="mailing-title">Подпишитесь на рассылку</h2>
           <!-- Подзаголовок секций "Рассылка" -->
-          <p class="mailing-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+          <p class="mailing-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post" href="#">
             <p class="mailing-form-name">
               <input  type="email" id="user-email" name="user-email" placeholder="Ваш e-mail" required>
@@ -191,13 +171,13 @@
       <footer class="main-footer" data-test="footer">
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a href="https://vk.com/htmlacademy">
+            <a class="footer-social-link" href="https://vk.com/htmlacademy">
               <img src="images/icons/vk-focus.svg" width="24" height="14" alt="Российская социальная сеть «ВКонтакте».">
               <span class="visually-hidden">ВКонтакте</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a href="https://t.me/htmlacademy">
+            <a class="footer-social-link" href="https://t.me/htmlacademy">
               <img src="images/icons/telegram-focus.svg" width="18" height="16" alt="Мессенджер «Telegram».">
               <span class="visually-hidden">Telegram</span>
             </a>
@@ -217,7 +197,7 @@
         </ul>
         <ul class="footer-logo-item">
           <li class="footer-logo-link">
-            <a href="https://htmlacademy.ru/">
+            <a class="logo-htmlacademy" href="https://htmlacademy.ru/">
               <img src="images/brand=htmlacademy.svg" width="114.9" height="32.9" alt="Видеохостинг Youtube.">
               <span class="visually-hidden">HTML Academy</span>
             </a>
