--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> список гостиниц в Седоне</title>
-    <!-- <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38"/..> -->
+    <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38"/>
   </head>
 
   <body>
