--- a/catalog.html
+++ b/catalog.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> список гостиниц в Седоне</title>
-    <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38"/>
-  </head>
+   </head>
 
   <body>
 
@@ -317,17 +316,17 @@
       </div>
       <div>
         <!-- Третья секция - рассылка -->
-        <section class="mailing" data-test="subsribe">
+        <section class="mailing mailing-subscribe-catalog" data-test="subsribe">
           <h2 class="mailing-title">Подпишитесь на рассылку</h2>
-          <!-- Подзаголовок секций "Рассылка" -->
           <p class="mailing-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post" href="#">
-            <p class="mailing-form-name">
+            <a class="mailing-form-name">
               <input  type="email" id="user-email" name="user-email" placeholder="Ваш e-mail" required>
               <button class="button button-mailing" type="submit">Подписаться</button>
-            </p>
+            </a>
           </form>
         </section>
+      </main>
 
         <footer class="main-footer" data-test="footer">
           <ul class="footer-social-list">
@@ -344,7 +343,7 @@
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
+              <a href="https://www.youtube.com/user/htmlacademyru">
                 <img src="images/icons/youtube-focus.svg" width="22" height="17" alt="Видеохостинг Youtube.">
                 <span class="visually-hidden">Youtube</span>
               </a>
@@ -358,7 +357,7 @@
           </ul>
           <ul class="footer-logo-item">
             <li class="footer-logo-link">
-              <a class="logo-htmlacademy" href="https://htmlacademy.ru/">
+              <a class="logo-html" href="https://htmlacademy.ru/">
                 <img src="images/brand=htmlacademy.svg" width="114.9" height="32.9" alt="Видеохостинг Youtube.">
                 <span class="visually-hidden">HTML Academy</span>
               </a>
