--- a/index.html
+++ b/index.html
@@ -117,21 +117,21 @@
                 <object data="images/icons/home.svg">
                   <img src="../images/icons/home.svg" width="75" height="72" role="img" aria-label="Домик" type="image/svg+xml">
                 </object>
-                <p>Жильё</p>
+                <p class="services-subtitul">Жильё</p>
                 <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
               <li class="services-item services-item-meal">
                 <object data="images/icons/food.svg">
                   <img src="../images/icons/food.svg" width="75" height="72" role="img" aria-label="Бургер" type="image/svg+xml">
                 </object>
-                <p>Еда</p>
+                <p class="services-subtitul">Еда</p>
                 <p class="services-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li class="services-item services-item-souvenirs">
                 <object data="images/icons/souvenir.svg">
                   <img src="../images/icons/souvenir.svg" width="75" height="72" role="img" aria-label="Сувенир" type="image/svg+xml">
                 </object>
-                <p>Сувениры</p>
+                <p class="services-subtitul">Сувениры</p>
                 <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
               </li>
             </ul>
@@ -154,7 +154,7 @@
           <p class="mailing-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post" href="#">
             <a class="mailing-form-name">
-              <input  type="email" id="user-email" name="user-email" placeholder="Ваш e-mail" required>
+              <input type="email" id="user-email" name="user-email" placeholder="Ваш e-mail" required>
               <button class="button button-mailing" type="submit">Подписаться</button>
             </a>
           </form>
