--- a/catalog.html
+++ b/catalog.html
@@ -314,7 +314,7 @@
           </div>
         </section>
       </div>
-      <div>
+      <div>        
         <!-- Третья секция - рассылка -->
         <section class="mailing mailing-subscribe-catalog" data-test="subsribe">
           <h2 class="mailing-title">Подпишитесь на рассылку</h2>
@@ -343,21 +343,18 @@
               </a>
             </li>
             <li class="footer-social-item">
-              <a href="https://www.youtube.com/user/htmlacademyru">
+              <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
                 <img src="images/icons/youtube-focus.svg" width="22" height="17" alt="Видеохостинг Youtube.">
                 <span class="visually-hidden">Youtube</span>
               </a>
             </li>
-          <ul class="footer-phone-item">
-            <li class="footer-phone-link">
-              <a class="text-phone" href="tel:+7(812)812-12-12">
+            <li class="footer-phone-item">
+              <a class="footer-phone-link" class="text-phone" href="tel:+7(812)812-12-12">
                 <span>+7(812)812-12-12</span>
               </a>
             </li>
-          </ul>
-          <ul class="footer-logo-item">
-            <li class="footer-logo-link">
-              <a class="logo-html" href="https://htmlacademy.ru/">
+            <li class="footer-logo-item">
+              <a class="footer-logo-link" class="logo-html" href="https://htmlacademy.ru/">
                 <img src="images/brand=htmlacademy.svg" width="114.9" height="32.9" alt="Видеохостинг Youtube.">
                 <span class="visually-hidden">HTML Academy</span>
               </a>
