--- a/catalog.html
+++ b/catalog.html
@@ -12,30 +12,25 @@
 
   <body>
 
+    /* ------- header ------- */
     <header class="main-header" data-test="header">
-      <!-- Заголовок меню в главной странице (скрытый) -->
       <h1 class="visually-hidden">Меню главной страницы</h1>
-      <!-- Меню -->
       <nav class="main-navigation">
-        <!-- Подзаголовок навигации (скрытый) -->
         <h2 class="visually-hidden">Навигация</h2>
-        <!-- Основной логотип города Седоны-->
         <a class="main-header-logo" href="index.html">
           <img src="images/brand-sedona.svg" width="140" height="70" type="image/svg+xml" alt="Логотип сайта городка Седона.">
         </a>
-        <!-- Список первой части меню -->
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="index.html">Главная</a>
+            <a class="navigation-link" href="index.html">Главнои</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">О Седоне</a>
+            <a class="navigation-link" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-text navigation-link-current" aria-current="page">Гостиницы</a>
+            <a class="navigation-link navigation-text navigation-link-current" href="catalog.html" aria-current="page">Гостиниц</a>
           </li>
         </ul>
-        <!-- Список второй части меню -->
         <ul class="navigation-list-user">
           <li class="navigation-item-user">
             <a class="navigation-link-user icon-search" href="#">
@@ -62,18 +57,15 @@
       </nav>
     </header>
 
-    <!-- Основное содержимое каталога -->
+    /* ------- main ------- */
     <main class="main-inner">
 
-    <!-- Заголовок главной страницы (скрытый) -->
-    <h1 class="main-inner-titul">Cайт поиска отелей в городе Седоне</h1>
-
+      <h1 class="main-inner-titul">Cайт поиска отелей в городе Седоне</h1>
       <div class="search-main"></div>
 
-        <!-- Первая секция - поиск гостиницы -->
+        <!-- Первая секция - search -->
         <section class="search" data-test="search">
-          <!-- Подзаголовок поисковой секции -->
-          <h2 class="search-subtitle">Гостиницы Седоны</h2>
+          <h2 class="search-subtitle">Гостиниц Седоны</h2>
           <ul class="breadcrumbs-list">
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link" href="index.html">
@@ -87,11 +79,8 @@
             </li>
           </ul>
           <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get" data-test="filter">
-          <!-- Форма поисковых наборов -->
             <h3 class="visually-hidden">Поисковые формы</h3>
-            <!-- Подзаголовок поисковых наборов (скрытый) -->
             <fieldset class="catalog-filter-infrastructure">
-            <!-- Набор полей инфраструктуры -->
               <legend class="catalog-filter-title">Инфраструктура:</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
@@ -115,7 +104,6 @@
               </ul>
             </fieldset>
             <fieldset class="catalog-filter-type-of-housing">
-            <!-- Набор полей типов жилья -->
               <legend class="catalog-filter-title">Тип жилья:</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
@@ -139,7 +127,6 @@
               </ul>
             </fieldset>
             <fieldset class="catalog-filter-price">
-            <!-- Набор полей прайса -->
               <object>
                 <legend class="catalog-filter-price">Стоимость, ₽:</legend>
                 <input type="number" name="min-price" id="min-price-field" value="0" placeholder="от">
@@ -157,63 +144,67 @@
         </section>
       </div>
       <div>
+
+                <!-- Вторая секция - форма полей результатов -->
         <section class="catalog-results" data-test="catalog">
-        <!-- Вторая секция - форма полей результатов -->
+
           <h2 class="catalog-results-subtitle" class="visually-hidden">Результат нашедших нужных гостиниц</h2>
-          <!-- Подзаголовок результата нужных гостиниц (скрытый) -->
-          <p class="catalog-results-text">Найдено гостиниц:
-            <span>38</span>
-          </p>
-          <form class="catalog-results-select">
-            <select class="catalog-results-select" name="sorting" aria-label="Сортировка">
-              <option value="cheap" selected>Сначала дешевые</option>
-              <option value="expensive">Сначала дорогие</option>
-              <option value="popular">Сначала популярные</option>
-            </select>
-          </form>
-          <ul class="variant-list">
-            <li class="variant-item">
-              <a class="variant-link catalog-tale" href="#">
-                <span class="visually-hidden">Вид плитками</span>
-              </a>
-            </li>
-            <li class="variant-item">
-              <a class="variant-link catalog-slide" href="#">
-                <span class="visually-hidden">Вид слайдами</span>
-              </a>
-            </li>
-            <li class="variant-item">
-              <a class="variant-link catalog-bulleted-list" href="#">
-                <span class="visually-hidden">Вид на маркированный список</span>
-              </a>
-            </li>
-          </ul>
+
+          <div>
+            <p class="catalog-results-text">Найдено гостиниц:
+              <span>38</span>
+            </p>
+            <form class="catalog-results-select">
+              <select class="catalog-results-select" name="sorting" aria-label="Сортировка">
+                <option value="cheap" selected>Сначала дешевые</option>
+                <option value="expensive">Сначала дорогие</option>
+                <option value="popular">Сначала популярные</option>
+              </select>
+            </form>
+            <ul class="variant-list">
+              <li class="variant-item">
+                <a class="variant-link catalog-tale" href="#">
+                  <span class="visually-hidden">Вид плитками</span>
+                </a>
+              </li>
+              <li class="variant-item">
+                <a class="variant-link catalog-slide" href="#">
+                  <span class="visually-hidden">Вид слайдами</span>
+                </a>
+              </li>
+              <li class="variant-item">
+                <a class="variant-link catalog-bulleted-list" href="#">
+                  <span class="visually-hidden">Вид на маркированный список</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+
           <form class="catalog-hotels">
-          <!-- Форма поиска нужных гостиниц -->
-            <h3 class=" catalog-hotels-subtheme visually-hidden">Примерный список гостиниц города Седоны</h3>
-            <!-- Подтема формы поиска гостиниц (скрытый) -->
+          
             <div class="hotel-cards">
+
               <ul class="hotel-cards-list">
                 <li class="hotel-cards-item">
-                  <a class="hotel-cards-link" href="#">
-                    <img src="images/catalog/hotel-1.jpg" alt="Гостиница Amara-Resort-and-Spa - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
-                    <h4 class="hotel-cards-subtitul">Amara Resort & Spa</h4>
-                  </a>
-                  <p class="hotel-cards-text">Гостиница</p>
-                  <p class="hotel-cards-price">От 4000 ₽</p>
-                  <a>
-                    <input class="hotel-cards-more-detailed" type="submit" href="#" value="Подробнее">
-                  </a>
-                  <a>
-                    <input class="hotel-cards-favourites" type="submit" href="#" value="В избранное">
-                  </a>
-                  <p class="stars-4">
-                    <span class="visually-hidden">Четырехзвездочный отель</span>
-                  </p>
-                  <a>
-                    <input class="hotel-cards-rating" type="submit" value="Рейтинг: 8.5">
-                  </a>
+                  <article class="">
+                    <a class="hotel-cards-link" href="#" tabindex="-1">
+                      <img  src="images/catalog/hotel-1.jpg" width="" height="" alt="Гостиница Amara-Resort-and-Spa - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
+                    </a>
+                    <a class="hotel-cards-subtitul" tabindex="-1">
+                      <h3>Amara Resort & Spa</h3>
+                    </a>                    
+                    <p class="hotel-cards-text">Гостиница</p>
+                    <p class="hotel-cards-price">От 4000 ₽</p>
+                    <a class="hotel-cards-more-detailed" href="#" tabindex="-1">Подробнее</a>
+                    <a class="hotel-cards-favourites" href="#">В избранное</a>
+                    <p class="stars-4">
+                      <span class="visually-hidden">Четырехзвездочный отель</span>
+                    </p>
+                    <a class="hotel-cards-rating">Рейтинг: 8.5</a>
+                  </article>
                 </li>
+
+
                 <li class="hotel-cards-item">
                   <a class="hotel-cards-link" href="#">
                     <img src="images/catalog/hotel-2.jpg" alt="Гостиница Villas-at-Poco-Diablo - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
@@ -280,7 +271,6 @@
           </form>
           <div class="pagination">
             <h3 class="visually-hidden">Страницы</h3>
-            <!-- Подтема секции форм страниц (скрытый)  -->
             <ul class="pagination-list">
               <li class="pagination-item">
                 <a href="#" class="pagination-link">
@@ -314,7 +304,8 @@
           </div>
         </section>
       </div>
-      <div>        
+      <div>
+
         <!-- Третья секция - рассылка -->
         <section class="mailing mailing-subscribe-catalog" data-test="subsribe">
           <h2 class="mailing-title">Подпишитесь на рассылку</h2>
